Fix patch endpoint for /users
