# docs/openapi.yml
@@ -134,7 +134,7 @@ paths:
       tags:
         - user
       summary: Update a user
-      description: Only users with a TEACHER role can update the cohortId or role. Users with Students role can only update their own details.
+      description: Only users with a TEACHER role can update the cohort_id or role. Users with Students role can only update their own details.
       operationId: userUpdate
       security:
         - bearerAuth: []
@@ -234,7 +234,7 @@ paths:
               properties:
                 date:
                   type: string
-                cohortId:
+                cohort_id:
                   type: integer
                 lines:
                   type: array
@@ -341,7 +341,7 @@ components:
           type: string
         role:
           type: string
-        cohortId:
+        cohort_id:
           type: integer
         firstName:
           type: string
@@ -367,6 +367,12 @@ components:
           type: string
         password:
           type: string
+        mobile:
+          type: string
+        specialism:
+          type: string
+        imageUrl:
+          type: string
 
     UpdateUser:
       type: object
@@ -375,7 +381,7 @@ components:
           type: string
         password:
           type: string
-        cohortId:
+        cohort_id:
           type: integer
         role:
           type: string
@@ -386,6 +392,12 @@ components:
         bio:
           type: string
         githubUrl:
+          type: string
+        mobile:
+          type: string
+        specialism:
+          type: string
+        imageUrl:
           type: string
 
     Posts:
@@ -416,7 +428,7 @@ components:
                     properties:
                       id:
                         type: integer
-                      cohortId:
+                      cohort_id:
                         type: integer
                       role:
                         type: string
@@ -445,7 +457,7 @@ components:
                   type: integer
                 email:
                   type: string
-                cohortId:
+                cohort_id:
                   type: integer
                 role:
                   type: string
@@ -456,6 +468,12 @@ components:
                 bio:
                   type: string
                 githubUrl:
+                  type: string
+                mobile:
+                  type: string
+                specialism:
+                  type: string
+                imageUrl:
                   type: string
     login:
       type: object
@@ -480,7 +498,7 @@ components:
                   type: integer
                 email:
                   type: string
-                cohortId:
+                cohort_id:
                   type: integer
                 role:
                   type: string
@@ -513,7 +531,7 @@ components:
               properties:
                 id:
                   type: integer
-                cohortId:
+                cohort_id:
                   type: integer
                 date:
                   type: string
